tests/baselines/reference/parserExportAssignment2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment2.ts (2 errors) ====
    export = foo;
    ~~~~~~~~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
    ~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'foo'.